week/week01/my_pubsub/log/build_2026-03-06_17-28-18/my_pubsub/stderr.log
  File "/home/ssu/robotics-practice/week/week01/my_pubsub/install/my_pubsub/lib/python3.10/site-packages/my_pubsub/my_pub.py", line 18
    self.get_logger().info('Publishing: "%s"' % msg.data
                          ^
SyntaxError: '(' was never closed

